# flux-diagnose-tui

./: .gitignore  Cargo.toml  README.md
benchmarks/: .localpaths.toml
benchmarks/flux-examples/flux-tests/0cd2677ef442c193f0aede857ff51e6cd414cc21/: 0cd2677-kmeans_step-L99-1.json  git-info.json
benchmarks/flux-examples/flux-tests/1ac74b5cc0183b9e614338b10e369c94e2b1aed7/: 1ac74b5-kmeans_step-L101-1.json  1ac74b5-kmeans_step-L101-2.json  1ac74b5-kmeans_step-L102-1.json  1ac74b5-nearest-L68-1.json  1ac74b5-normalize_centers-L83-1.json  1ac74b5-normalize_centers-L83-2.json  git-info.json
benchmarks/flux-examples/flux-tests/458f4a31429065646f852e5852b481e0173b135f/: 458f4a3-kmeans_step-L109-1.json  458f4a3-kmeans_step-L109-2.json  458f4a3-nearest-L75-1.json  458f4a3-normalize_centers-L83-1.json  458f4a3-normalize_centers-L83-2.json  git-info.json
benchmarks/flux-examples/flux-tests/7707a153e7ca1e765ac0811e4f4175154be02e89/: 7707a15-kmeans-L119-1.json  git-info.json
benchmarks/flux-examples/flux-tests/d7b4f17edc9c6aafd5a1bd7cadf2cd83798b0003/: d7b4f17-dist-L13-1.json  git-info.json
benchmarks/flux-examples/kani-vecdeque/5103eb82b80ba3fa4cf7c47ad8c5706f779750b3/: 5103eb8-copy_nonoverlapping-L144-1.json  5103eb8-copy_nonoverlapping-L145-1.json  5103eb8-with_capacity_in-L283-1.json  git-info.json
benchmarks/flux-examples/kani-vecdeque/5f9d3b012e5e4bd57e25cb3618964a58bbb5b57e/: 5f9d3b0-with_capacity-L250-1.json  git-info.json
benchmarks/flux-examples/kani-vecdeque/9997a443345286b33875aace0c4dfc686e65461c/: 9997a44-grow-L563-1.json  9997a44-handle_capacity_increase-L189-1.json  9997a44-handle_capacity_increase-L192-1.json  git-info.json  (+9 more)
src/: benchmark_processor.rs  benchmark_suite.rs  cached_repository.rs  evaluator.rs  local_paths.rs  main-list.rs  main.rs  run_cmd.rs  tui.rs  types.rs
(+38 files in other folders)
