[package]
name = "flux-diagnose-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.37", features = ["derive"]}
crossterm = "0.28.1"
ratatui = {version = "0.29.0", features = ["crossterm"]}
ratatui-explorer = "0.1.3"
syntect = "5.2.0"
syntect-tui = "3.0.5"
textwrap = "0.16.2"
tui-input = {version = "0.11.1", features = ["crossterm"]}
unicode-width = "0.2.0"
