[package]
name = "flux-diagnose-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.37", features = ["derive"]}
comfy-table = "7.1.4"
crossterm = "0.28.1"
env_logger = "0.11.8"
git2 = "0.20.1"
log = "0.4.27"
once_cell = "1.21.3"
pathdiff = "0.2.3"
ratatui = {version = "0.29.0", features = ["crossterm"]}
ratatui-explorer = "0.1.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = "5.2.0"
syntect-tui = "3.0.5"
tempfile = "3.19.1"
textwrap = "0.16.2"
toml = "0.8.20"
tui-input = {version = "0.11.1", features = ["crossterm"]}
unicode-width = "0.2.0"
url = "2.5.4"
